fix(media-card): fix vertical spacing for both slots and properties

--- a/src/components/gds-media-card/_index.scss
+++ b/src/components/gds-media-card/_index.scss
@@ -42,19 +42,21 @@
 }
 
 @mixin headline {
-  margin-bottom: 0 0 var(--spacing-xxs) 0;
+  margin-top: 0;
+  margin-bottom: var(--spacing-xxs);
 }
 
 @mixin description {
-  margin: 0 0 var(--spacing-s) 0;
+  margin-top: var(--spacing-xxs);
+  margin-bottom: 0;
 }
 
 @mixin tags {
-  margin: 0 0 var(--spacing-xxs) 0;
+  margin-top: var(--spacing-s);
 }
 
 @mixin content {
-  padding: var(--spacing-m) var(--spacing-xs);
+  padding: var(--spacing-m) var(--spacing-m) var(--spacing-l) var(--spacing-m);
 }
 
 @mixin overlay {
